src/math_ops/snapshots/rbx_types_ops__math_ops__udim__udim_add_f32.snap
---
source: src/math_ops/udim.rs
expression: "UDim::new(5.0, 32).add(&10.0f32.into())"
---
UDim:
  - 15
  - 32
