src/math_ops/snapshots/rbx_types_ops__math_ops__udim__udim_add_udim.snap
---
source: src/math_ops/udim.rs
expression: "UDim::new(5.0, 16).add(&UDim::new(10.0, 32).into())"
---
UDim:
  - 15
  - 48
