src/math_ops/snapshots/rbx_types_ops__math_ops__udim__udim_floor_div_f32.snap
---
source: src/math_ops/udim.rs
expression: "UDim::new(5.23, 32).floor_div(&16.2f32.into())"
---
UDim:
  - 0
  - 2
