src/math_ops/snapshots/rbx_types_ops__math_ops__udim__udim_floor_div_udim.snap
---
source: src/math_ops/udim.rs
expression: "UDim::new(5.23, 16).floor_div(&UDim::new(16.2, 32).into())"
---
UDim:
  - 0
  - 0
