src/math_ops/snapshots/rbx_types_ops__math_ops__udim__udim_modulus_f32.snap
---
source: src/math_ops/udim.rs
expression: "UDim::new(15.0, 32).modulus(&16.2f32.into())"
---
UDim:
  - 15
  - 0
