src/math_ops/snapshots/rbx_types_ops__math_ops__udim__udim_modulus_udim.snap
---
source: src/math_ops/udim.rs
expression: "UDim::new(15.0, 16).modulus(&UDim::new(16.2, 32).into())"
---
UDim:
  - 15
  - 16
