src/math_ops/snapshots/rbx_types_ops__math_ops__udim__udim_mult_f32.snap
---
source: src/math_ops/udim.rs
expression: "UDim::new(10.0, 32).mult(&10.0f32.into())"
---
UDim:
  - 100
  - 320
