src/math_ops/snapshots/rbx_types_ops__math_ops__udim__udim_mult_udim.snap
---
source: src/math_ops/udim.rs
expression: "UDim::new(10.0, 16).mult(&UDim::new(10.0, 32).into())"
---
UDim:
  - 100
  - 512
