src/math_ops/snapshots/rbx_types_ops__math_ops__udim__udim_pow_f32.snap
---
source: src/math_ops/udim.rs
expression: "UDim::new(10.0, 32).pow(&5.0f32.into())"
---
UDim:
  - 100000
  - 33554432
