src/math_ops/snapshots/rbx_types_ops__math_ops__udim__udim_pow_udim.snap
---
source: src/math_ops/udim.rs
expression: "UDim::new(10.0, 16).pow(&UDim::new(5.0, 32).into())"
---
UDim:
  - 100000
  - 2147483647
